Wed Jul  6 07:11:27 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (putline): raise an ArgumentError when
	  CR or LF is included in a line.

Tue Jul  5 20:49:30 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/json/*, test/json/*: Update json-2.0.1.
	  Changes of 2.0.0: https://github.com/flori/json/blob/f679ebd0c69a94e3e70a897ac9a229f5779c2ee1/CHANGES.md#2015-09-11-200
	  Changes of 2.0.1: https://github.com/flori/json/blob/f679ebd0c69a94e3e70a897ac9a229f5779c2ee1/CHANGES.md#2016-07-01-201
	  [Feature #12542][ruby-dev:49706][fix GH-1395]

Tue Jul  5 19:39:49 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* string.c (rb_str_change_terminator_length): New function to change
	  termlen and resize heap for the terminator. This is split from
	  rb_str_fill_terminator (str_fill_term) because filling terminator
	  and changing terminator length are different things. [Bug #12536]

	* internal.h: declaration for rb_str_change_terminator_length.

	* string.c (str_fill_term): Simplify only to zero-fill the terminator.
	  For non-shared strings, it assumes that (capa + termlen) bytes of
	  heap is allocated. This partially reverts r55557.

	* encoding.c (rb_enc_associate_index): rb_str_change_terminator_length
	  is used, and it should be called whenever the termlen is changed.

	* string.c (str_capacity): New static function to return capacity
	  of a string with the given termlen, because the termlen may
	  sometimes be different from TERM_LEN(str) especially during
	  changing termlen or filling terminator with specific termlen.

	* string.c (rb_str_capacity): Use str_capacity.

Tue Jul  5 11:07:14 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* pack.c (pack_pack): use union instead of bare variable to ease
	  optimizations and avoid assigning x87 floating point number.
	  [ruby-core:74496] [Bug #12209]

	* pack.c (pack_unpack): ditto.

Mon Jul  4 13:56:34 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* process.c: define sig_t if not exist.